@@ -232,7 +232,7 @@ static gint         account_cmp_by_number( const ofoAccount *a, const gchar *num
 static gint         account_cmp_by_ptr( const ofoAccount *a, const ofoAccount *b );
 static void         icollectionable_iface_init( myICollectionableInterface *iface );
 static guint        icollectionable_get_interface_version( void );
-static GList       *icollectionable_load_collection( const myICollectionable *instance, void *user_data );
+static GList       *icollectionable_load_collection( void *user_data );
 static void         iexportable_iface_init( ofaIExportableInterface *iface );
 static guint        iexportable_get_interface_version( void );
 static gchar       *iexportable_get_label( const ofaIExportable *instance );
@@ -2219,7 +2219,7 @@ icollectionable_get_interface_version( void )
 }
 
 static GList *
-icollectionable_load_collection( const myICollectionable *instance, void *user_data )
+icollectionable_load_collection( void *user_data )
 {
 	GList *dataset, *it;
 	ofoAccount *account;
