@@ -196,7 +196,7 @@ static gint            model_cmp_by_mnemo( const ofoOpeTemplate *a, const gchar 
 static gint            ope_template_cmp_by_ptr( const ofoOpeTemplate *a, const ofoOpeTemplate *b );
 static void            icollectionable_iface_init( myICollectionableInterface *iface );
 static guint           icollectionable_get_interface_version( void );
-static GList          *icollectionable_load_collection( const myICollectionable *instance, void *user_data );
+static GList          *icollectionable_load_collection( void *user_data );
 static void            iexportable_iface_init( ofaIExportableInterface *iface );
 static guint           iexportable_get_interface_version( void );
 static gchar          *iexportable_get_label( const ofaIExportable *instance );
@@ -1581,7 +1581,7 @@ icollectionable_get_interface_version( void )
 }
 
 static GList *
-icollectionable_load_collection( const myICollectionable *instance, void *user_data )
+icollectionable_load_collection( void *user_data )
 {
 	ofoOpeTemplatePrivate *priv;
 	GList *dataset, *it;
