@@ -155,7 +155,7 @@ static gint      rate_cmp_by_ptr( const ofoRate *a, const ofoRate *b );
 static gint      rate_cmp_by_validity( const ofsRateValidity *a, const ofsRateValidity *b, gboolean *consistent );
 static void      icollectionable_iface_init( myICollectionableInterface *iface );
 static guint     icollectionable_get_interface_version( void );
-static GList    *icollectionable_load_collection( const myICollectionable *instance, void *user_data );
+static GList    *icollectionable_load_collection( void *user_data );
 static void      iexportable_iface_init( ofaIExportableInterface *iface );
 static guint     iexportable_get_interface_version( void );
 static gchar    *iexportable_get_label( const ofaIExportable *instance );
@@ -1207,7 +1207,7 @@ icollectionable_get_interface_version( void )
 }
 
 static GList *
-icollectionable_load_collection( const myICollectionable *instance, void *user_data )
+icollectionable_load_collection( void *user_data )
 {
 	ofoRatePrivate *priv;
 	GList *dataset, *it;
