@@ -192,7 +192,7 @@ static gint        form_cmp_by_mnemo( const ofoTVAForm *a, const gchar *mnemo );
 static gint        tva_form_cmp_by_ptr( const ofoTVAForm *a, const ofoTVAForm *b );
 static void        icollectionable_iface_init( myICollectionableInterface *iface );
 static guint       icollectionable_get_interface_version( void );
-static GList      *icollectionable_load_collection( const myICollectionable *instance, void *user_data );
+static GList      *icollectionable_load_collection( void *user_data );
 static void        iexportable_iface_init( ofaIExportableInterface *iface );
 static guint       iexportable_get_interface_version( void );
 static gchar      *iexportable_get_label( const ofaIExportable *instance );
@@ -1509,7 +1509,7 @@ icollectionable_get_interface_version( void )
 }
 
 static GList *
-icollectionable_load_collection( const myICollectionable *instance, void *user_data )
+icollectionable_load_collection( void *user_data )
 {
 	static const gchar *thisfn = "ofo_tva_form_load_dataset";
 	ofoTVAFormPrivate *priv;
